--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZFbQGK7NOwsXKamFaKzg480W4JRAJXsXzq6jM23Y3lg=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -24,9 +24,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=example_app
-DB_USERNAME=root
-DB_PASSWORD=
+ DB_DATABASE=testpay
+# DB_DATABASE=coco_hospitals
+DB_USERNAME=pramod
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +65,16 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+IDFC_MERCHANT_ID=P6U1n9wizo2MCx
+IDFC_API_KEY=rzp_test_kjSwiWP0bDtAWr
+IDFC_KEY_SECRET=ILmyREpcYwgRUmjzo1UuDfI7
+
+#IDFC_PAYMENT_URL=https://paymentgateway.idfcfirstbank.com/payment/initiate
+IDFC_PAYMENT_URL=https://sandboxpaymentgateway.idfcfirstbank.com/payment/initiate
+IDFC_CALLBACK_URL=http://127.0.0.1:8003/payment/callback
+
+IDFC_ENVIRONMENT=test
+
+
